@@ -595,18 +595,6 @@ public abstract class AbstractGradleExecuter implements GradleExecuter, Resettab
             gradleInvocation.implicitLauncherJvmArgs.add(debugLauncher.toDebugArgument());
         }
         gradleInvocation.implicitLauncherJvmArgs.add("-ea");
-
-        // Note: it's possible we shouldn't calculate _any_ implicit JVM args when requested to use only the specified ones, but to preserve behavior I only excluded the new flag here
-        if (useOnlyRequestedJvmOpts) {
-            return;
-        }
-
-        JavaVersion javaVersion = getJavaVersionFromJavaHome();
-        if (javaVersion.isCompatibleWith(JavaVersion.VERSION_24)) {
-            // Remove known warning that occurs in the launcher. This can be fixed by refactoring the bin/gradle start script to pass the flag or by adding the flag to the launcher JAR
-            // and refactoring the start script to use that JAR instead of a main class.
-            gradleInvocation.implicitLauncherJvmArgs.add("--enable-native-access=ALL-UNNAMED");
-        }
     }
 
     protected static String joinAndQuoteJvmArgs(List<String> buildJvmArgs) {
